@@ -13,7 +13,9 @@ import io.kestra.core.models.flows.State;
 import io.kestra.core.models.storage.FileMetas;
 import io.kestra.core.models.tasks.TaskForExecution;
 import io.kestra.core.models.triggers.AbstractTriggerForExecution;
-import io.kestra.core.models.triggers.types.Webhook;
+import io.kestra.core.runners.FlowInputOutput;
+import io.kestra.core.utils.TestsUtils;
+import io.kestra.plugin.core.trigger.Webhook;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.ExecutionRepositoryInterface;
@@ -40,6 +42,7 @@ import jakarta.inject.Named;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.condition.EnabledIfEnvironmentVariable;
 import org.junitpioneer.jupiter.RetryingTest;
+import reactor.core.publisher.Flux;
 
 import java.io.File;
 import java.net.URLEncoder;
@@ -54,6 +57,7 @@ import java.util.concurrent.TimeoutException;
 import java.util.stream.IntStream;
 
 import static io.kestra.core.utils.Rethrow.throwRunnable;
+import static io.micronaut.http.HttpRequest.GET;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.*;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -89,6 +93,9 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
     @Client("/")
     ReactorSseClient sseClient;
 
+    @Inject
+    private FlowInputOutput flowIO;
+
     public static final String TESTS_FLOW_NS = "io.kestra.tests";
     public static final String TESTS_WEBHOOK_KEY = "a-secret-key";
 
@@ -101,15 +108,15 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         .put("instant", "2019-10-06T18:27:49Z")
         .put("file", Objects.requireNonNull(InputsTest.class.getClassLoader().getResource("data/hello.txt")).getPath())
         .put("secret", "secret")
-        .put("array", """
-            ["s1", "s2", "s3"]""")
+        .put("array", "[1, 2, 3]")
+        .put("json", "{}")
         .build();
 
     @Test
     void getNotFound() {
         HttpClientResponseException e = assertThrows(
             HttpClientResponseException.class,
-            () -> client.toBlocking().retrieve(HttpRequest.GET("/api/v1/executions/exec_id_not_found"))
+            () -> client.toBlocking().retrieve(GET("/api/v1/executions/exec_id_not_found"))
         );
 
         assertThat(e.getStatus(), is(HttpStatus.NOT_FOUND));
@@ -142,8 +149,8 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
             .addPart("files", "file", MediaType.TEXT_PLAIN_TYPE, applicationFile)
             .addPart("files", "optionalFile", MediaType.TEXT_XML_TYPE, logbackFile)
             .addPart("secret", "secret")
-            .addPart("array", """
-            ["s1", "s2", "s3"]""")
+            .addPart("array", "[1, 2, 3]")
+            .addPart("json", "{}")
             .build();
     }
 
@@ -165,7 +172,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(result.getInputs().containsKey("bool"), is(true));
         assertThat(result.getInputs().get("bool"), nullValue());
         assertThat(result.getLabels().size(), is(5));
-        assertThat(result.getLabels().get(0), is(new Label("flow-label-1", "flow-label-1")));
+        assertThat(result.getLabels().getFirst(), is(new Label("flow-label-1", "flow-label-1")));
         assertThat(result.getLabels().get(1), is(new Label("flow-label-2", "flow-label-2")));
         assertThat(result.getLabels().get(2), is(new Label("a", "label-1")));
         assertThat(result.getLabels().get(3), is(new Label("b", "label-2")));
@@ -177,7 +184,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         Execution result = triggerInputsFlowExecution(true);
 
         assertThat(result.getState().getCurrent(), is(State.Type.SUCCESS));
-        assertThat(result.getTaskRunList().size(), is(10));
+        assertThat(result.getTaskRunList().size(), is(13));
     }
 
     @Test
@@ -186,10 +193,11 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
 
         // Get the triggered execution by execution id
         Execution foundExecution = client.retrieve(
-            HttpRequest.GET("/api/v1/executions/" + result.getId()),
+            GET("/api/v1/executions/" + result.getId()),
             Execution.class
         ).block();
 
+        assertThat(foundExecution, is(notNullValue()));
         assertThat(foundExecution.getId(), is(result.getId()));
         assertThat(foundExecution.getNamespace(), is(result.getNamespace()));
     }
@@ -201,7 +209,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         String flowId = "minimal-bis";
 
         PagedResults<Execution> executionsBefore = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions?namespace=" + namespace + "&flowId=" + flowId),
+            GET("/api/v1/executions?namespace=" + namespace + "&flowId=" + flowId),
             Argument.of(PagedResults.class, Execution.class)
         );
 
@@ -212,7 +220,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // Wait for execution indexation
         Await.until(() -> executionRepositoryInterface.findByFlowId(null, namespace, flowId, Pageable.from(1)).size() == 1);
         PagedResults<Execution> executionsAfter = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions?namespace=" + namespace + "&flowId=" + flowId),
+            GET("/api/v1/executions?namespace=" + namespace + "&flowId=" + flowId),
             Argument.of(PagedResults.class, Execution.class)
         );
 
@@ -228,12 +236,13 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
             .collectList()
             .block();
 
+        assertThat(results, is(notNullValue()));
         assertThat(results.size(), is(greaterThan(0)));
-        assertThat(results.get(results.size() - 1).getData().getState().getCurrent(), is(State.Type.SUCCESS));
+        assertThat(results.getLast().getData().getState().getCurrent(), is(State.Type.SUCCESS));
     }
 
     private ExecutionController.EvalResult eval(Execution execution, String expression, int index) {
-        ExecutionController.EvalResult eval = client.toBlocking().retrieve(
+        return client.toBlocking().retrieve(
             HttpRequest
                 .POST(
                     "/api/v1/executions/" + execution.getId() + "/eval/" + execution.getTaskRunList().get(index).getId(),
@@ -242,8 +251,6 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
                 .contentType(MediaType.TEXT_PLAIN_TYPE),
             Argument.of(ExecutionController.EvalResult.class)
         );
-
-        return eval;
     }
 
     @Test
@@ -254,15 +261,15 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(result.getResult(), is("my simple string"));
 
         result = this.eval(execution, "{{ taskrun.id }}", 0);
-        assertThat(result.getResult(), is(execution.getTaskRunList().get(0).getId()));
+        assertThat(result.getResult(), is(execution.getTaskRunList().getFirst().getId()));
 
         result = this.eval(execution, "{{ outputs['1-1_return'][taskrun.value].value }}", 21);
         assertThat(result.getResult(), containsString("1-1_return"));
 
         result = this.eval(execution, "{{ missing }}", 21);
         assertThat(result.getResult(), is(nullValue()));
-        assertThat(result.getError(), containsString("Missing variable: 'missing' on '{{ missing }}' at line 1"));
-        assertThat(result.getStackTrace(), containsString("Missing variable: 'missing' on '{{ missing }}' at line 1"));
+        assertThat(result.getError(), containsString("Unable to find `missing` used in the expression `{{ missing }}` at line 1"));
+        assertThat(result.getStackTrace(), containsString("Unable to find `missing` used in the expression `{{ missing }}` at line 1"));
     }
 
     @Test
@@ -279,7 +286,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(resultMap.get("type"), is("io.kestra.datatype:aes_encrypted"));
         assertThat(resultMap.get("value"), notNullValue());
 
-        execution = runnerUtils.runOne(null, "io.kestra.tests", "inputs", null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
+        execution = runnerUtils.runOne(null, "io.kestra.tests", "inputs", null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
 
         result = this.eval(execution, "{{inputs.secret}}", 0);
         assertThat(result.getResult(), not(inputs.get("secret")));
@@ -291,7 +298,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         final String referenceTaskId = "unknownTaskId";
 
         // Run execution until it ends
-        Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
+        Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
 
         HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().retrieve(
             HttpRequest
@@ -309,7 +316,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         final String flowId = "restart_with_inputs";
 
         // Run execution until it ends
-        Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
+        Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
 
         HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().retrieve(
             HttpRequest
@@ -328,7 +335,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         final String referenceTaskId = "instant";
 
         // Run execution until it ends
-        Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
+        Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
 
         Optional<Flow> flow = flowRepositoryInterface.findById(null, TESTS_FLOW_NS, flowId);
 
@@ -379,7 +386,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
 
         // Run execution until it ends
         Execution parentExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, flowId, null,
-            (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
+            (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
 
         Optional<Flow> flow = flowRepositoryInterface.findById(null, TESTS_FLOW_NS, flowId);
         assertThat(flow.isPresent(), is(true));
@@ -455,7 +462,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(finishedRestartedExecution.getParentId(), nullValue());
         assertThat(finishedRestartedExecution.getTaskRunList().size(), is(4));
 
-        assertThat(finishedRestartedExecution.getTaskRunList().get(0).getAttempts().size(), is(1));
+        assertThat(finishedRestartedExecution.getTaskRunList().getFirst().getAttempts().size(), is(1));
         assertThat(finishedRestartedExecution.getTaskRunList().get(1).getAttempts().size(), is(1));
         assertThat(finishedRestartedExecution.getTaskRunList().get(2).getAttempts().size(), is(2));
         assertThat(finishedRestartedExecution.getTaskRunList().get(3).getAttempts().size(), is(1));
@@ -519,7 +526,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(finishedRestartedExecution.getParentId(), nullValue());
         assertThat(finishedRestartedExecution.getTaskRunList().size(), is(5));
 
-        assertThat(finishedRestartedExecution.getTaskRunList().get(0).getAttempts().size(), is(1));
+        assertThat(finishedRestartedExecution.getTaskRunList().getFirst().getAttempts().size(), is(1));
         assertThat(finishedRestartedExecution.getTaskRunList().get(1).getAttempts().size(), is(1));
         assertThat(finishedRestartedExecution.getTaskRunList().get(2).getAttempts(), nullValue());
         assertThat(finishedRestartedExecution.getTaskRunList().get(2).getState().getHistories().stream().filter(state -> state.getState() == State.Type.PAUSED).count(), is(1L));
@@ -535,29 +542,31 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
 
     @Test
     void downloadFile() throws TimeoutException {
-        Execution execution = runnerUtils.runOne(null, TESTS_FLOW_NS, "inputs", null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
-        assertThat(execution.getTaskRunList(), hasSize(10));
+        Execution execution = runnerUtils.runOne(null, TESTS_FLOW_NS, "inputs", null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
+        assertThat(execution.getTaskRunList(), hasSize(13));
 
         String path = (String) execution.getInputs().get("file");
 
         String file = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + execution.getId() + "/file?path=" + path),
+            GET("/api/v1/executions/" + execution.getId() + "/file?path=" + path),
             String.class
         );
 
         assertThat(file, is("hello"));
 
         FileMetas metas = client.retrieve(
-            HttpRequest.GET("/api/v1/executions/" + execution.getId() + "/file/metas?path=" + path),
+            GET("/api/v1/executions/" + execution.getId() + "/file/metas?path=" + path),
             FileMetas.class
         ).block();
 
+
+        assertThat(metas, is(notNullValue()));
         assertThat(metas.getSize(), is(5L));
 
         String newExecutionId = IdUtils.create();
 
         HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + execution.getId() + "/file?path=" + path.replace(execution.getId(),
+            GET("/api/v1/executions/" + execution.getId() + "/file?path=" + path.replace(execution.getId(),
                 newExecutionId
             )),
             String.class
@@ -570,13 +579,13 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
 
     @Test
     void filePreview() throws TimeoutException {
-        Execution defaultExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, "inputs", null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, inputs));
-        assertThat(defaultExecution.getTaskRunList(), hasSize(10));
+        Execution defaultExecution = runnerUtils.runOne(null, TESTS_FLOW_NS, "inputs", null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, inputs));
+        assertThat(defaultExecution.getTaskRunList(), hasSize(13));
 
         String defaultPath = (String) defaultExecution.getInputs().get("file");
 
         String defaultFile = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + defaultExecution.getId() + "/file/preview?path=" + defaultPath),
+            GET("/api/v1/executions/" + defaultExecution.getId() + "/file/preview?path=" + defaultPath),
             String.class
         );
 
@@ -591,24 +600,24 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
             .put("instant", "2019-10-06T18:27:49Z")
             .put("file", Objects.requireNonNull(ExecutionControllerTest.class.getClassLoader().getResource("data/iso88591.txt")).getPath())
             .put("secret", "secret")
-            .put("array", """
-            ["s1", "s2", "s3"]""")
+            .put("array", "[1, 2, 3]")
+            .put("json", "{}")
             .build();
 
-        Execution latin1Execution = runnerUtils.runOne(null, TESTS_FLOW_NS, "inputs", null, (flow, execution1) -> runnerUtils.typedInputs(flow, execution1, latin1FileInputs));
-        assertThat(latin1Execution.getTaskRunList(), hasSize(10));
+        Execution latin1Execution = runnerUtils.runOne(null, TESTS_FLOW_NS, "inputs", null, (flow, execution1) -> flowIO.typedInputs(flow, execution1, latin1FileInputs));
+        assertThat(latin1Execution.getTaskRunList(), hasSize(13));
 
         String latin1Path = (String) latin1Execution.getInputs().get("file");
 
         String latin1File = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + latin1Execution.getId() + "/file/preview?path=" + latin1Path + "&encoding=ISO-8859-1"),
+            GET("/api/v1/executions/" + latin1Execution.getId() + "/file/preview?path=" + latin1Path + "&encoding=ISO-8859-1"),
             String.class
         );
 
         assertThat(latin1File, containsString("Düsseldorf"));
 
         HttpClientResponseException e = assertThrows(HttpClientResponseException.class, () -> client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + latin1Execution.getId() + "/file/preview?path=" + latin1Path + "&encoding=foo"),
+            GET("/api/v1/executions/" + latin1Execution.getId() + "/file/preview?path=" + latin1Path + "&encoding=foo"),
             String.class
         ));
 
@@ -620,7 +629,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
     @Test
     void webhook() {
         Flow webhook = flowRepositoryInterface.findById(null, TESTS_FLOW_NS, "webhook").orElseThrow();
-        String key = ((Webhook) webhook.getTriggers().get(0)).getKey();
+        String key = ((Webhook) webhook.getTriggers().getFirst()).getKey();
 
         Execution execution = client.toBlocking().retrieve(
             HttpRequest
@@ -635,7 +644,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(((Map<String, Object>) execution.getTrigger().getVariables().get("body")).get("b"), is(true));
         assertThat(((Map<String, Object>) execution.getTrigger().getVariables().get("parameters")).get("name"), is(List.of("john")));
         assertThat(((Map<String, List<Integer>>) execution.getTrigger().getVariables().get("parameters")).get("age"), containsInAnyOrder("12", "13"));
-        assertThat(execution.getLabels().get(0), is(new Label("flow-label-1", "flow-label-1")));
+        assertThat(execution.getLabels().getFirst(), is(new Label("flow-label-1", "flow-label-1")));
         assertThat(execution.getLabels().get(1), is(new Label("flow-label-2", "flow-label-2")));
 
         execution = client.toBlocking().retrieve(
@@ -647,8 +656,8 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
             Execution.class
         );
 
-        assertThat(((List<Map<String, Object>>) execution.getTrigger().getVariables().get("body")).get(0).get("a"), is(1));
-        assertThat(((List<Map<String, Object>>) execution.getTrigger().getVariables().get("body")).get(0).get("b"), is(true));
+        assertThat(((List<Map<String, Object>>) execution.getTrigger().getVariables().get("body")).getFirst().get("a"), is(1));
+        assertThat(((List<Map<String, Object>>) execution.getTrigger().getVariables().get("body")).getFirst().get("b"), is(true));
 
         execution = client.toBlocking().retrieve(
             HttpRequest
@@ -662,8 +671,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(execution.getTrigger().getVariables().get("body"), is("bla"));
 
         execution = client.toBlocking().retrieve(
-            HttpRequest
-                .GET("/api/v1/executions/webhook/" + TESTS_FLOW_NS + "/webhook/" + key),
+            GET("/api/v1/executions/webhook/" + TESTS_FLOW_NS + "/webhook/" + key),
             Execution.class
         );
         assertThat(execution.getTrigger().getVariables().get("body"), is(nullValue()));
@@ -683,8 +691,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
     @Test
     void webhookDynamicKey() {
         Execution execution = client.toBlocking().retrieve(
-            HttpRequest
-                .GET(
+            GET(
                     "/api/v1/executions/webhook/" + TESTS_FLOW_NS + "/webhook-dynamic-key/webhook-dynamic-key"
                 ),
             Execution.class
@@ -698,8 +705,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
     @EnabledIfEnvironmentVariable(named = "SECRET_WEBHOOK_KEY", matches = ".*")
     void webhookDynamicKeyFromASecret() {
         Execution execution = client.toBlocking().retrieve(
-            HttpRequest
-                .GET(
+            GET(
                     "/api/v1/executions/webhook/" + TESTS_FLOW_NS + "/webhook-secret-key/secretKey"
                 ),
             Execution.class
@@ -751,7 +757,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // check that the execution is no more paused
         Thread.sleep(100);
         Execution execution = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution.getId()),
+            GET("/api/v1/executions/" + pausedExecution.getId()),
             Execution.class);
         assertThat(execution.getState().isPaused(), is(false));
     }
@@ -782,11 +788,11 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // check that the execution is no more paused
         Thread.sleep(100);
         Execution execution = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution.getId()),
+            GET("/api/v1/executions/" + pausedExecution.getId()),
             Execution.class);
         assertThat(execution.getState().isPaused(), is(false));
 
-        Map<String, Object> outputs = (Map<String, Object>) execution.findTaskRunsByTaskId("pause").get(0).getOutputs().get("onResume");
+        Map<String, Object> outputs = (Map<String, Object>) execution.findTaskRunsByTaskId("pause").getFirst().getOutputs().get("onResume");
         assertThat(outputs.get("asked"), is("myString"));
         assertThat((String) outputs.get("data"), startsWith("kestra://"));
     }
@@ -812,11 +818,11 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // check that the executions are no more paused
         Thread.sleep(100);
         Execution resumedExecution1 = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution1.getId()),
+            GET("/api/v1/executions/" + pausedExecution1.getId()),
             Execution.class
         );
         Execution resumedExecution2 = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution2.getId()),
+            GET("/api/v1/executions/" + pausedExecution2.getId()),
             Execution.class
         );
         assertThat(resumedExecution1.getState().isPaused(), is(false));
@@ -851,11 +857,11 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // check that the executions are no more paused
         Thread.sleep(100);
         Execution resumedExecution1 = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution1.getId()),
+            GET("/api/v1/executions/" + pausedExecution1.getId()),
             Execution.class
         );
         Execution resumedExecution2 = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution2.getId()),
+            GET("/api/v1/executions/" + pausedExecution2.getId()),
             Execution.class
         );
         assertThat(resumedExecution1.getState().isPaused(), is(false));
@@ -880,7 +886,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(execution2.getState().isTerminated(), is(true));
 
         PagedResults<?> executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search"), PagedResults.class
+            GET("/api/v1/executions/search"), PagedResults.class
         );
         assertThat(executions.getTotal(), is(2L));
 
@@ -895,7 +901,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(replayResponse.getCount(), is(2));
 
         executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search"), PagedResults.class
+            GET("/api/v1/executions/search"), PagedResults.class
         );
         assertThat(executions.getTotal(), is(4L));
     }
@@ -909,7 +915,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(execution2.getState().isTerminated(), is(true));
 
         PagedResults<?> executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search"), PagedResults.class
+            GET("/api/v1/executions/search"), PagedResults.class
         );
         assertThat(executions.getTotal(), is(2L));
 
@@ -921,7 +927,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThat(resumeResponse.getCount(), is(2));
 
         executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search"), PagedResults.class
+            GET("/api/v1/executions/search"), PagedResults.class
         );
         assertThat(executions.getTotal(), is(4L));
     }
@@ -940,7 +946,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // check that the execution is no more paused
         Thread.sleep(100);
         Execution execution = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + pausedExecution.getId()),
+            GET("/api/v1/executions/" + pausedExecution.getId()),
             Execution.class);
         assertThat(execution.getState().isPaused(), is(false));
     }
@@ -948,7 +954,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
     @Test
     void find() {
         PagedResults<?> executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search"), PagedResults.class
+            GET("/api/v1/executions/search"), PagedResults.class
         );
 
         assertThat(executions.getTotal(), is(0L));
@@ -957,28 +963,29 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
 
         // + is there to simulate that a space was added (this can be the case from UI autocompletion for eg.)
         executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search?page=1&size=25&labels=url:+"+ENCODED_URL_LABEL_VALUE), PagedResults.class
+            GET("/api/v1/executions/search?page=1&size=25&labels=url:+"+ENCODED_URL_LABEL_VALUE), PagedResults.class
         );
 
         assertThat(executions.getTotal(), is(1L));
 
         HttpClientResponseException e = assertThrows(
             HttpClientResponseException.class,
-            () -> client.toBlocking().retrieve(HttpRequest.GET("/api/v1/executions/search?startDate=2024-01-07T18:43:11.248%2B01:00&timeRange=PT12H"))
+            () -> client.toBlocking().retrieve(GET("/api/v1/executions/search?startDate=2024-01-07T18:43:11.248%2B01:00&timeRange=PT12H"))
         );
 
         assertThat(e.getStatus(), is(HttpStatus.UNPROCESSABLE_ENTITY));
+        assertThat(e.getResponse().getBody(String.class).isPresent(), is(true));
         assertThat(e.getResponse().getBody(String.class).get(), containsString("are mutually exclusive"));
 
         executions = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/search?timeRange=PT12H"), PagedResults.class
+            GET("/api/v1/executions/search?timeRange=PT12H"), PagedResults.class
         );
 
         assertThat(executions.getTotal(), is(1L));
 
         e = assertThrows(
             HttpClientResponseException.class,
-            () -> client.toBlocking().retrieve(HttpRequest.GET("/api/v1/executions/search?timeRange=P1Y"))
+            () -> client.toBlocking().retrieve(GET("/api/v1/executions/search?timeRange=P1Y"))
         );
 
         assertThat(e.getStatus(), is(HttpStatus.UNPROCESSABLE_ENTITY));
@@ -993,7 +1000,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // listen to the execution queue
         CountDownLatch killingLatch = new CountDownLatch(1);
         CountDownLatch killedLatch = new CountDownLatch(1);
-        executionQueue.receive(e -> {
+        Flux<Execution> receiveExecutions = TestsUtils.receive(executionQueue, e -> {
             if (e.getLeft().getId().equals(runningExecution.getId()) && e.getLeft().getState().getCurrent() == State.Type.KILLING) {
                 killingLatch.countDown();
             }
@@ -1004,7 +1011,7 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
 
         // listen to the executionkilled queue
         CountDownLatch executionKilledLatch = new CountDownLatch(1);
-        killQueue.receive(e -> {
+        Flux<ExecutionKilled> receiveKilled = TestsUtils.receive(killQueue, e -> {
             if (((ExecutionKilledExecution) e.getLeft()).getExecutionId().equals(runningExecution.getId())) {
                 executionKilledLatch.countDown();
             }
@@ -1018,17 +1025,20 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         // check that the execution has been set to killing then killed
         assertTrue(killingLatch.await(10, TimeUnit.SECONDS));
         assertTrue(killedLatch.await(10, TimeUnit.SECONDS));
+        receiveExecutions.blockLast();
+
         //check that an executionkilled message has been sent
         assertTrue(executionKilledLatch.await(10, TimeUnit.SECONDS));
+        receiveKilled.blockLast();
 
         // retrieve the execution from the API and check that the task has been set to killed
         Thread.sleep(500);
         Execution execution = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + runningExecution.getId()),
+            GET("/api/v1/executions/" + runningExecution.getId()),
             Execution.class);
         assertThat(execution.getState().getCurrent(), is(State.Type.KILLED));
         assertThat(execution.getTaskRunList().size(), is(1));
-        assertThat(execution.getTaskRunList().get(0).getState().getCurrent(), is(State.Type.KILLED));
+        assertThat(execution.getTaskRunList().getFirst().getState().getCurrent(), is(State.Type.KILLED));
     }
 
     @Test
@@ -1147,18 +1157,20 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         assertThrows(HttpClientResponseException.class, () -> client.toBlocking().retrieve(requestNullValue, Execution.class));
     }
 
+    @SuppressWarnings("DataFlowIssue")
     @Test
     void getFlowForExecution() {
         FlowForExecution result = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/flows/io.kestra.tests/full"),
+            GET("/api/v1/executions/flows/io.kestra.tests/full"),
             FlowForExecution.class
         );
 
         assertThat(result, notNullValue());
         assertThat(result.getTasks(), hasSize(5));
-        assertThat((result.getTasks().get(0) instanceof TaskForExecution), is(true));
+        assertThat((result.getTasks().getFirst() instanceof TaskForExecution), is(true));
     }
 
+    @SuppressWarnings("DataFlowIssue")
     @Test
     void getFlowForExecutionById() {
         Execution execution = client.toBlocking().retrieve(
@@ -1171,33 +1183,45 @@ class ExecutionControllerTest extends JdbcH2ControllerTest {
         );
 
         FlowForExecution result = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/" + execution.getId() + "/flow"),
+            GET("/api/v1/executions/" + execution.getId() + "/flow"),
             FlowForExecution.class
         );
 
         assertThat(result.getId(), is(execution.getFlowId()));
         assertThat(result.getTriggers(), hasSize(1));
-        assertThat((result.getTriggers().get(0) instanceof AbstractTriggerForExecution), is(true));
+        assertThat((result.getTriggers().getFirst() instanceof AbstractTriggerForExecution), is(true));
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void getDistinctNamespaceExecutables() {
         List<String> result = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/namespaces"),
+            GET("/api/v1/executions/namespaces"),
             Argument.of(List.class, String.class)
         );
 
         assertThat(result.size(), greaterThanOrEqualTo(5));
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     void getFlowFromNamespace() {
         List<FlowForExecution> result = client.toBlocking().retrieve(
-            HttpRequest.GET("/api/v1/executions/namespaces/io.kestra.tests/flows"),
+            GET("/api/v1/executions/namespaces/io.kestra.tests/flows"),
             Argument.of(List.class, FlowForExecution.class)
         );
 
         assertThat(result.size(), greaterThan(100));
+    }
+
+    @Test
+    void badDate() {
+
+        HttpClientResponseException exception = assertThrows(HttpClientResponseException.class, () ->
+            client.toBlocking().retrieve(GET("/api/v1/executions/search?startDate=2024-06-03T00:00:00.000%2B02:00&endDate=2023-06-05T00:00:00.000%2B02:00"), PagedResults.class));
+        assertThat(exception.getStatus().getCode(), is(422));
+        assertThat(exception.getMessage(),is("Illegal argument: Start date must be before End Date"));
+
     }
 
 }
